--- a/recommendation-service/src/main/resources/application.yml
+++ b/recommendation-service/src/main/resources/application.yml
@@ -17,6 +17,8 @@ spring:
   profiles: docker
 
 eureka:
+  instance:
+      preferIpAddress: true
   client:
     serviceUrl:
       defaultZone: http://eureka-server/eureka/
