--- a/recommendation-service/src/main/resources/application.yml
+++ b/recommendation-service/src/main/resources/application.yml
@@ -1,27 +1,20 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8011/eureka/,http://localhost:8012/eureka/,http://localhost:8013/eureka/
+      defaultZone: http://localhost:8010/eureka/
 server:
   port: ${PORT:${SERVER_PORT:0}}   # Select any available port if neither port nor server port are specified.
 
 ---
 spring:
-  profiles: pact-test
+  profiles: docker
 
 server:
-  port: 8080
-
----
-spring:
-  profiles: docker
+  port: 9020
 
 eureka:
   instance:
       preferIpAddress: true
   client:
     serviceUrl:
-      defaultZone: http://eureka-server/eureka/
-
-server:
-  port: 9020
+      defaultZone: http://eureka-server:8010/eureka/
